feat: increased coveraged and fixed minor bugs